clusters/sirius/apps/email-expense-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-expense-tracker
  labels:
    app.kubernetes.io/instance: email-expense-tracker
    app.kubernetes.io/name: email-expense-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: email-expense-tracker
      app.kubernetes.io/name: email-expense-tracker
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: email-expense-tracker
        app.kubernetes.io/name: email-expense-tracker
    spec:
      containers:
        - name: email-expense-tracker
          image: ghcr.io/moonblade/email-expense-tracker:ts_1791344593 # {"$imagepolicy": "email-expense-tracker:email-expense-tracker"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 300
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 5
      imagePullSecrets:
        - name: email-expense-tracker-image-pull
