clusters/sirius/apps/email-expense-tracker/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: email-expense-tracker-external
  labels:
    app.kubernetes.io/instance: email-expense-tracker
    app.kubernetes.io/name: email-expense-tracker
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - email-expense.moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-email-expense-tracker
          namespace: authentik
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: email-expense-tracker-internal
  labels:
    app.kubernetes.io/instance: email-expense-tracker
    app.kubernetes.io/name: email-expense-tracker
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - email-expense.sirius.moonblade.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: email-expense-tracker
          port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: email-expense-tracker-internal-redirect
  labels:
    app.kubernetes.io/instance: email-expense-tracker
    app.kubernetes.io/name: email-expense-tracker
spec:
  parentRefs:
    - name: main-gateway
      namespace: nginx-gateway
      sectionName: http
  hostnames:
    - email-expense.sirius.moonblade.work
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
